--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,7 +8,6 @@
             transition: .3s;
             position: fixed;
             opacity: 97.50%;
-            visibility: hidden;
             z-index: 101;
         }
         
@@ -157,7 +156,7 @@
             overflow-y: auto;
         }
         
-        #boton:hover>.submenu {
+        .fixed-action-btn:hover>.submenu {
             visibility: visible;
         }
         
