--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 .submenu {
     left: 0%;
-    top: 0px;
-    width: 20px;
+    top: -5px;
+    width: 50%;
     height: 10%;
     border-style: solid white;
     border-radius: 1px;
@@ -28,7 +28,7 @@
 .redes,
 .fichas {
     left: 8px;
-    width: 110%;
+    width: 130%;
     text-align: center;
     border-style: solid;
     border-radius: 2px;
@@ -162,7 +162,8 @@
 
 .modal-trigger {
     position: fixed;
-    top: 70px;
+    right: 4%;
+    bottom: 7%;
     z-index: 150;
 }
 
