--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,21 @@
+
+/* Estilos personalizados */
+body.dark-mode {
+	background-color: #333;
+	color: #fff;
+}
+
+body.dark-mode h1, body.dark-mode p {
+	color: #fff;
+}
+
+.switch {
+    position:fixed;
+    right: 2%;
+    top: 1.3%;
+    z-index: 150;
+}
+
 .card.borde,.card-image {
 border-radius: 15px;
 }
