--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,13 +23,14 @@ body.dark-mode .card-title {
 }
 
 
+
 .switch {
     position:fixed;
     right: 2%;
     top: 2%;
     z-index: 150;
 }
-
+/*forma y posicion de las cajas*/
 .card.borde,.card-image {
 border-radius: 15px;
 }
@@ -66,38 +67,3 @@ footer {
 }
 
 
-/*@media screen and (min-width: 350px) AND (max-width: 550px) {
-    .fondo {
-        position: fixed;
-        top: 10%;
-        left: 0px;
-        z-index: 50;
-    }
-}
-
-@media screen and (min-width: 550px) AND (max-width: 850px) {
-    .submenu {
-        position: fixed;
-        top: 10%;
-        left: 0px;
-        z-index: 101;
-    }
-}
-
-@media screen and (min-width: 850px) AND (max-width: 1366px) {
-    .fondo {
-        position: fixed;
-        top: 10%;
-        left: 0px;
-        z-index: 50;
-    }
-}
-
-@media screen and (min-width: 1366px) {
-    .fondo {
-        position: fixed;
-        top: 10%;
-        left: 0px;
-        z-index: 50;
-    }
-}
