--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,13 +56,15 @@ border-radius: 15px;
 
 
 footer {
+    display: contents;
     width: 100%;
-    height: 35px;
+    height:30px;
     position: fixed;
     bottom: 0px;
     left: 0px;
     text-align: center;
     z-index: 100;
 }
+
 
 
