--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,6 +54,19 @@ border-radius: 15px;
     bottom: 0%;
 }
 
+#searchInput {
+    border-radius: 10px;
+    background: #7d7d7d;
+    width: 90%;
+    height:30px;
+    margin-left: 4%;
+}
+
+.placeholder {
+
+}
+
+
 
 footer {
     display: contents;
