--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,7 +56,7 @@ border-radius: 15px;
 
 #searchInput {
     border-radius: 10px;
-    background: #7d7d7d;
+    background: #2f2e2e;
     width: 90%;
     height:30px;
     margin-left: 4%;
