--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,7 +51,7 @@ border-radius: 15px;
 
 #searchInput {
     border-radius: 7px;
-    background: #6bf99d;
+    background: #0ab5f3;
     width: 120%;
     height:40px;
     margin-top: 10px;
