--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,14 @@
 h5 {
-    color:#333;
-    margin: 15px;;
+    color: #333;
+    margin: 15px;
+    ;
 }
+
+.btn-small {
+
+    margin-left: 0% !important;
+}
+
 
 
 /* Estilos personalizados */
@@ -63,7 +70,7 @@ body.dark-mode .card-title {
 }
 
 .btn-large {
-    margin: 5px;;
+    margin: 5px;
 }
 
 .modal-footer {
@@ -95,4 +102,3 @@ footer {
     transition: box-shadow 0.3s ease-in-out;
 
 }
-
