--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,7 +82,7 @@ footer {
 }
 
 /* Estilos hoverable */
-.hoverable:hover {
+.buscador:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease-in-out;
     width: 400px;
