--- a/css/estilo.css
+++ b/css/estilo.css
@@ -74,18 +74,87 @@ footer {
     z-index: 100;
 }
 
-/* Estilos para el buscador */
+/* Estilos para el buscador 
 .input-field {
     margin: 10px;
     border-radius: 5px;
     width: 45px;
 }
 
-/* Estilos hoverable */
+/* Estilos hoverable
 .buscador:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease-in-out;
     width: 360px;
     transition: width 0.4s ease-in-out;
 
+} */
+
+body {
+	margin: 0;
+	padding: 0;
+	background:#ecebeb;
+}
+
+.container {
+    position: relative;
+    top: 100px;
+}
+.contenedor {
+	position: absolute;
+	left: 48%;
+	top: 10%;
+	transform: translate(-50%,-50%);
+	padding: 10px;
+}
+
+input {
+	outline: none;
+	box-sizing: border-box;
+	height: 60px;
+	width: 0px;
+	padding: 0 20px;
+	color: #000;
+	border-radius: 50px !important;
+	font-size: 20px;
+    background-color: rgb(255, 255, 255) !important;
+	border: 1px solid #bebdbd !important;
+	transition: all .3s ease ;
+}
+
+::placeholder {
+	color: grey;
+}
+
+.btn {
+	position: absolute;
+	right: 0px;
+	top: -8px;
+	width: 80px;
+	height: 80px;
+	background: #D50000;
+	line-height: 80px;
+	border-radius: 50%;
+	text-align: center;
+	cursor: pointer;
+	transition: .5s ;
+}
+
+.btn i {
+	font-size: 25px;
+	color: white;
+	line-height: 80px;
+	transition: all .7s ease;
+}
+
+.contenedor:hover input {
+	width: 350px;
+}
+
+.contenedor:hover i{
+	transform: rotate(-360deg);
+}
+
+.btn:hover{
+	background: #cc0000;
 }
