--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,7 +103,7 @@ body {
 .contenedor {
 	position: absolute;
 	left: 48%;
-	top: 10%;
+	top: 120px;
 	transform: translate(-50%,-50%);
 	padding: 10px;
 }
