--- a/css/estilo.css
+++ b/css/estilo.css
@@ -98,7 +98,7 @@ body {
 }
 .contenedor {
 	position: absolute;
-	left: 48%;
+	left: 53%;
 	top: 120px;
 	transform: translate(-50%,-50%);
 	padding: 10px;
@@ -108,17 +108,20 @@ input {
 	outline: none;
 	box-sizing: border-box;
 	height: 60px;
-	width: 0px;
+	width: 10px !important;
 	padding: 0 20px;
 	color: #000;
 	border-radius: 50px !important;
 	font-size: 20px;
+    padding-left: 10px !important;
     background-color: rgb(255, 255, 255) !important;
 	border: 1px solid #bebdbd !important;
-	transition: all .3s ease ;
+	transition: all .7s ease !important ;
 }
 
+
 ::placeholder {
+    left: 15px !important;
 	color: grey;
 }
 
@@ -144,7 +147,9 @@ input {
 }
 
 .contenedor:hover input {
-	width: 350px;
+	width: 320px !important;
+    transition: all .7s ease-in-out ;
+
 }
 
 .contenedor:hover i{
