--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,3 @@
-h5 {
-    color: #333;
-    margin: 15px;
-    ;
-}
 
 .btn-small {
 
@@ -160,3 +155,13 @@ input {
 .btn:hover{
 	background: #cc0000;
 }
+
+
+.borde:hover .card-reveal{
+    border-radius: 15px;
+    display: block !important;
+    transform: translateY(-100%) !important;
+	transition: all .7s ease !important ;
+
+}
+
