--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,3 @@
-.btn-small {
-
-    margin-left: 0% !important;
-}
-
-
 
 /* Estilos personalizados */
 body.dark-mode {
@@ -157,24 +151,26 @@ input {
 }
 
 
-.borde:hover .card-reveal {
+.borde:hover  .card-reveal {
     border-radius: 15px;
-    display: block !important;
+    display:block!important;
     transform: translateY(-100%) !important;
-    transition: all .7s ease !important;
+    transition-duration: all .7s ease-in-out !important;
 
 }
 
 .bb {
     top: 8px;
-    right: 20px;
+    right: 10px;
+    display: block !important;
     position: absolute !important;
-    z-index: 999;
+    z-index: 152;
 }
 
 .btn-small {
-    top: 20px;
+    top: 10px;
     border-radius: 5px !important;
+    margin-left: 0% !important;
 }
 
 .menuh {
