--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,3 @@
-
 /* Estilos personalizados */
 body.dark-mode {
     background-color: #333;
@@ -34,7 +33,8 @@ body.dark-mode .card-title {
 
 /*forma y posicion de las cajas*/
 .card.borde,
-.card-image, #modo-nieve {
+.card-image,
+#modo-nieve {
     border-radius: 15px;
 
 }
@@ -152,7 +152,7 @@ input {
 }
 
 .material-icons {
-    pointer-events: none ;
+    pointer-events: none;
 }
 
 
@@ -177,21 +177,24 @@ input {
     border-radius: 5px !important;
 }
 
-.borde:hover  .card-reveal {
+.borde:hover .card-reveal {
     border-radius: 15px;
-    display:block!important;
-    transform:  translateY(-100%)  !important;
+    display: block !important;
+    transform: translateY(-100%) !important;
     transition: all .5s ease-in-out !important;
 
 }
 
 #modo-nieve {
     position: relative;
-   
+
     overflow: hidden;
+
 }
+
 .copo-nieve {
     position: absolute;
     user-select: none;
     pointer-events: none;
+    z-index: 153;
 }
