--- a/css/estilo.css
+++ b/css/estilo.css
@@ -143,6 +143,9 @@ input {
 .bb {
     top: 8px;
     right: 10px;
+    width: 30px;
+    height: none;
+    padding: 0%;
     display: block !important;
     position: absolute !important;
     z-index: 152;
