--- a/css/estilo.css
+++ b/css/estilo.css
@@ -224,3 +224,23 @@ input {
 }
 
 
+@media (max-width: 770px) {
+
+    .brand-logo {
+        font-size: 20px !important;
+    }
+}
+
+@media (max-width: 530px) {
+
+    .brand-logo {
+        font-size: 17px !important;
+    }
+}
+
+@media (max-width: 445px) {
+
+    .brand-logo {
+        font-size: 13px !important;
+    }
+}
